fixed spacing in register form

--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -61,7 +61,7 @@
   }
   
   .register-form .preview {
-    margin-top: 10px;
+    margin-top: 25px;
   }
   
   .register-form .preview img {
@@ -73,6 +73,7 @@
   }
   
   .register-btn {
+    margin-top: 20px;
     padding: 15px;
     border: none;
     border-radius: 10px;
